src/assets/scss/style.scss
@import "~semantic-ui-css/semantic.min.css";

@import "~react-datepicker/dist/react-datepicker.css";

@import "~emoji-mart/css/emoji-mart.css";

// Font types
@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Jost:ital,wght@0,100;1,100&family=Noto+Sans&family=Poppins&family=Roboto&display=swap");

.ui,
ui.form,
#root {
  font-family: Poppins, sans-serif !important;
  letter-spacing: 0.4px;
}

.ui.tiny.modal {
  width: 300px !important;
  color: #b8ccf0 !important;
}

.ui.button {
  font-weight: 300 !important;
  border-radius: 2px !important;
}

.logo-text {
  font-family: "Poppins";
  font-size: 20px;
  color: white;
  width: fit-content;
}

.logo-text > h2 {
  cursor: pointer;
}

.card-detail-container {
  margin-top: 0px !important;
}

.ui.modal > .close {
  top: 1.5% !important ;
  right: 0.5rem !important;
  color: #767676 !important;
}

.upload {
  opacity: 0;
  z-index: -1;
}

.nav-button-icon {
  font-size: 14px !important;
  color: #fff;
}

.nav-button-text {
  color: #fff !important;
}

.card-list::-webkit-scrollbar {
  display: none;
}

.lists-container::-webkit-scrollbar {
  display: none;
}

.icon-wrapper::-webkit-scrollbar {
  display: none;
}

.icon-wrapper::-webkit-scrollbar {
  display: none;
}

.image-container,
.card-list {
  -ms-overflow-style: none;
}

#app {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
}

.boards-container::-webkit-scrollbar {
  display: none;
}

.image-container::-webkit-scrollbar {
  display: none;
}

.board-menu-sidebar {
  width: 280px !important;
  border-radius: 8px !important;
  border: none !important;
}
.chat-sidebar {
  width: 350px !important;
  border-radius: 8px !important;
  border: none !important;
}

.board-menu-sidebar::-webkit-scrollbar {
  display: none;
}

.sidebar-activities::-webkit-scrollbar {
  display: none;
  overflow-y: scroll;
}

.tab-container {
  border: none !important;
}

.sidebar {
  border: none !important;
}

.ui.sidebar {
  border-radius: 3px !important;
}

.message-box {
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
}

.item-complete {
  text-decoration: line-through;
}

.auth-page {
  align-items: center;
  background-color: #fafbfc;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-items: center;
  position: relative;
}

.checklist-item-wrap {
  display: flex;
  justify-content: space-between;
  padding: 5px 0;
}

.checklist-edit-wrap {
  display: flex;
  align-items: baseline;
}

.progress-bar-wrap {
  padding-right: 5px;
}

.card-checklist {
  padding-right: 0;
}

.checklist-item-actions {
  width: 300px;
  padding: 5px;
  display: flex;
  flex-direction: column;
  align-items: baseline;
}

.uibutton:hover {
  background-color: #2224261a !important;
  text-align: "left" !important;
}

.attachment-link {
  background-position: 50%;
  background-size: contain;
  background-repeat: no-repeat;
  border-radius: 3px;
  margin-top: -40px;
  text-align: center;
  text-decoration: none;
  z-index: 1;
  width: 100%;
}

.attachment-link-text {
  font-weight: 700;
  color: #172b4d;
  cursor: pointer;
}

.attachment-link-span {
  background-color: #091e420a;
  color: #5e6c84;
  display: block;
  font-size: 18px;
  font-weight: 700;
  height: 100%;
  line-height: 80px;
  text-align: center;
  text-transform: uppercase;
  text-decoration: none;
  width: 112px;
}
.attachment-thumbnail,
.attachment-thumbnail-wrap {
  height: 80px !important;
  width: 112px !important;
  border-top: 0 !important;
  display: block;
}

.image-attachment-container {
  margin-bottom: 10px;
}

.div-flex {
  display: flex;
}

.attachment-thumbnail img {
  height: 80px !important;
  width: 100%;
  cursor: pointer;
}

.redirect-icon {
  transform: rotate(-42deg);
  padding-left: 5px;
  font-size: 12px !important;
  color: #172b4d;
}

.doc-page-buttons {
  align-items: baseline;
  align-items: center;
  background: transparent !important;
  border-radius: 3px;
  bottom: 1%;
  display: flex;
  height: 80px;
  justify-content: space-around;
  position: fixed;
  width: 40%;
  font-size: 15px !important;
  color: #fff;
}

.document-view-wrap {
  width: fit-content !important;
  background: transparent !important;
  margin: 5vh 0 0 0 !important;
  padding-bottom: 8% !important;
}

.modal-content-wrapper {
  display: flex !important;
  flex-direction: column !important;
  align-items: center !important;
  overflow-y: auto;
  width: 80vw;
  max-height: 78vh;
}

.document-content {
  width: 100% !important;
}
.page-tracker {
  padding: 5px;
}

.image-preview {
  height: 67vh;
  align-items: center;
  display: flex;
  justify-content: center;
}

.image-preview > img {
  max-width: 100%;
  max-height: 100%;
}

.txt-preview-edit-buttons,
.img-preview-edit-buttons {
  cursor: pointer;
}

.docx-preview,
.pdf-preview {
  display: flex;
  justify-content: center;
  background: #e2dfe4;
  min-height: 92vh;
}

.txt-preview {
  background: #fff;
  max-height: 75vh;
  overflow-y: auto;
  padding: 1% 2%;
}

.close-modal {
  position: absolute;
  top: 0% !important;
  color: #000 !important;
}

.docx-container {
  width: 56%;
  background: #fff;
  display: flex;
  border-radius: 2px;
  flex-direction: column;
  padding: 76px;
  pointer-events: none;
  box-shadow: 0px 0px 35px -8px #000000bf;
}

.card-source > div {
  text-decoration: underline;
}

.move-card-wrapper {
  width: fit-content;
}

@media only screen and (min-width: 1920px) {
  .ui.modal {
    width: 789px;
  }
}

@media only screen and (min-width: 992px) {
  .ui.modal {
    width: 808px;
  }
  .docx-container {
    width: 70%;
    padding: 50px;
  }
}

@media only screen and (max-width: 767px) {
  .checklist-header {
    grid-template-columns: 1fr;
  }
  .attachment-thumbnail {
    margin-left: 0 !important;
  }
  .modal-content-wrapper {
    width: 94vw;
  }

  .document-view-wrap {
    padding-bottom: 36% !important;
  }
  .doc-page-buttons {
    width: 96%;
  }

  .docx-container {
    width: 100%;
    padding: 6px;
  }
}

